--- a/Product_S/proStyle.css
+++ b/Product_S/proStyle.css
@@ -2449,10 +2449,12 @@ footer {
   }
 
   /*=======product=======*/
-
+  .pro-section {
+    height: 100%;
+  }
   .proMenuArray {
     width: 100%;
-
+    height: 100%;
     margin: 0;
     padding: 0;
   }
@@ -2482,7 +2484,6 @@ footer {
   .pro-product-list-two li,
   .pro-product-list-three li {
     width: 48%;
-    height: 480px;
   }
   .pro-product-list li a,
   .pro-product-list-two li a,
@@ -2498,8 +2499,9 @@ footer {
   }
 
   .product-detail {
-    width: 98%;
-    height: 28%;
+    margin: 0;
+    width: 100%;
+    height: 30%;
   }
   .product-desc {
     font-size: 0.7rem;
@@ -2519,6 +2521,7 @@ footer {
     height: 300px;
   }
   .product-detail.active {
+    width: 50%;
     height: 60%;
   }
   .product-select-color.active {
