--- a/product_inner/productD.css
+++ b/product_inner/productD.css
@@ -29,17 +29,15 @@ a {
 .proD-top-section {
   /* position: relative; */
   display: flex;
-  height: 300vh;
+  height: 1950vh;
+  border: 1px solid red;
 }
 
 /*----left----*/
 .proD-left-section {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  bottom: 500px;
   overflow: hidden;
-
   width: 50%;
   height: 100vh;
 }
@@ -55,13 +53,12 @@ a {
 
 .proD-image {
   width: 100%;
-  /* height: 100vh; */
 }
 
 .proD-image img {
   object-position: fixed;
   object-fit: cover;
-  /* height: 100%; */
+  min-height: 100vh;
   width: 100%;
 }
 .proD-small-image {
@@ -80,7 +77,6 @@ a {
   border: 3px solid #fff;
 }
 .proD-image-button {
-  border: 1px solid red;
   position: absolute;
   left: -20%;
   top: 0;
@@ -136,54 +132,49 @@ a {
 
 /*----right----*/
 .proD-right-section {
-  position: absolute;
-  right: 0;
+  position: relative;
   width: 50%;
-  /* height: 100vh; */
-  /* overflow-y: auto; */
+  height: auto;
 }
-
-/* .proD-right-section {
-  -ms-overflow-style: none;
-}
-.proD-right-section::-webkit-scrollbar {
-  display: none;
-} */
 
 .right-section-wrap {
   position: relative;
   width: 86%;
-  height: 645px;
-  background: #fff;
+  height: auto;
   margin: 0 auto;
   margin-top: 120px;
+  overflow: hidden;
 }
 .proD-nav {
   width: 100%;
   display: flex;
   justify-content: right;
   gap: 20px;
-  font-family: "sofia";
 }
 .proD-nav a {
   display: flex;
   justify-content: space-between;
-  width: 80px;
+  width: 70px;
   align-items: center;
-  font-size: 14px;
+  font-size: 13px;
+  font-family: "sofia";
+  color: #333;
+  font-weight: 600;
 }
+.proD-nav a:nth-child(1),
+.proD-nav a:nth-child(2) {
+  font-family: "Noto Sans KR";
+}
+
 .proD-nav a:last-child {
-  padding-left: 30px;
+  padding-left: 20px;
 }
 .proD-text-tit {
   display: flex;
   flex-direction: column;
 }
 .proD-text {
-  border: 1px solid green;
   width: 100%;
-  /* height: 96%; */
-  height: 1000px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -224,6 +215,8 @@ a {
   justify-content: space-between;
   align-items: center;
   margin-top: 18px;
+  width: 100%;
+  flex-wrap: wrap;
 }
 .proD-text-link a {
   border: 1px solid #ddd;
@@ -259,6 +252,7 @@ a {
   width: 50px;
   height: 50px;
   border-radius: 100%;
+  cursor: pointer;
 }
 .proD-text-colors span:nth-child(1) {
   background: url("./content_img/멜론_fca193.jpg") center/cover no-repeat;
@@ -276,6 +270,7 @@ a {
   font-size: 15px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .proD-text-desc span {
@@ -286,20 +281,73 @@ a {
 .proD-buy-button {
   background: #333;
   width: 520px;
-  height: 68px;
-  line-height: 64px;
+  height: 60px;
+  line-height: 60px;
   border-radius: 10px;
   text-align: center;
-  margin-top: 34px;
+  margin-top: 28px;
   font-size: 20px;
   font-weight: 500;
   color: #f2c6cf;
+  cursor: pointer;
+}
+.proD-sticky-bar {
+  display: flex;
+  flex: 1;
+  height: 170px;
+  width: 100%;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  background: #fff;
+  box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.2);
+}
+.proD-sticky-bar span {
+  width: 100%;
+  line-height: 70px;
+  margin-top: 100px;
+  text-align: center;
+  cursor: pointer;
+}
+.proD-sticky-bar span.active {
+  font-weight: bold;
+}
+
+.proD-img-content {
+  width: 670px;
+  margin: 0 auto;
+}
+
+.proD-img-content-wrap {
+  width: 100%;
+}
+.proD-img-content img {
+  width: 100%;
+}
+.proD-product-detail {
+  width: 80%;
+  margin-left: 5%;
+  height: auto;
+  border-top: 1px solid #ddd;
+  padding: 20px 0;
+  color: #333;
+}
+.proD-product-detail-title {
+  display: flex;
+  gap: 12%;
+}
+.proD-product-detail-title h4 {
+  font-size: 15px;
+  font-weight: 500;
+  min-width: 160px;
+  margin-bottom: 20px;
+  border: 1px solid red;
+}
+.proD-product-detail-title p {
+  color: #777;
+  font-size: 12px;
 }
 .proD-bottom-section {
-  /* position: absolute;
-  left: 0;
-  bottom: 0; */
   width: 100%;
-  height: 500px;
-  border: 5px solid rebeccapurple;
+  height: auto;
 }
