--- a/240403/react02/src/App.css
+++ b/240403/react02/src/App.css
@@ -12,8 +12,9 @@ li {
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
-
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
 }
