--- a/javascript/style.css
+++ b/javascript/style.css
@@ -3,13 +3,20 @@
 .wrap {
   font-family: "Pre";
 }
-/* header {
+/*-----header-----*/
+header {
   position: fixed;
   left: 0;
   top: 0;
-} */
+  height: 120px;
+  width: 100%;
+  z-index: 100;
+  background: #fff;
+}
 .header-search {
   border: 1px solid #cfcfcf;
+  width: 100%;
+  border-right: none;
 }
 .search-bar {
   height: 48px;
@@ -86,23 +93,30 @@ nav {
   left: 50%;
   transform: translateX(-50%);
 }
-.slide {
+/*-----content-slide-----*/
+.content-slide {
+  margin-top: 120px;
   width: 100%;
   overflow: hidden;
+}
+.slide {
+  width: 80%;
+  overflow: hidden;
+  margin: 0 auto;
 }
 .slide ul {
   position: relative;
   display: flex;
   gap: 80px;
-  width: 100%;
+  width: auto;
   margin: 0 auto;
 }
 .slide-btn {
   position: absolute;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
-  width: 100%;
+
+  width: 1500px;
   left: -28px;
   top: 50%;
 }
@@ -114,15 +128,179 @@ nav {
   background: #fff;
   text-align: center;
   line-height: 50px;
+  cursor: pointer;
 }
 
 .slide-btn .prev {
   transform: rotate(180deg);
 }
 .slide ul li {
-  border: 1px solid red;
   width: 100%;
 }
 .slide ul li img {
   object-fit: cover;
+}
+.current-page {
+  position: absolute;
+  right: 120px;
+  bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60px;
+  height: 30px;
+  padding: 0 10px;
+  background: hsla(0, 0%, 35%, 0.5);
+  border-radius: 20px;
+  font-size: 0.8rem;
+  color: #fff;
+}
+
+/*-----content-info-----*/
+.content-info {
+  height: 150px;
+  margin-top: 40px;
+}
+.content-info ul {
+  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  gap: 4%;
+}
+.content-info ul li {
+  width: 150px;
+  height: 150px;
+  border-radius: 20px;
+  background: #fff;
+  transition: all 0.3s;
+}
+.content-info ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.content-info ul li:hover {
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
+}
+/*-----content-pick-----*/
+.content-pick {
+  display: flex;
+}
+.pick-wrap {
+  width: 1440px;
+  margin: 60px auto;
+}
+.pick-tit {
+  font: 600 2.6rem/1 "Pre";
+  height: 60px;
+}
+.pick-submenu {
+  width: 1440px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.pick-submenu li {
+  width: auto;
+  padding: 14px 30px;
+  border-radius: 40px;
+  border: 1px solid #cfcfcf;
+  font: 500 18px/1 "Pre";
+}
+.pick-slide {
+  width: 100%;
+  height: auto;
+  display: flex;
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+.pick-book {
+  width: 100%;
+  display: flex;
+  margin-top: 28px;
+}
+.book-bg {
+  width: 345px;
+  height: 400px;
+  border-radius: 30px;
+  background: #f5f8fd;
+  margin: 20px 20px 20px 0;
+  position: relative;
+  cursor: pointer;
+}
+.book-bg::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 30px;
+  opacity: 0;
+  transition: all 0.3s;
+}
+.book-bg img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 52%;
+}
+#book-tit-hover {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font: 600 18px/1 "Pre";
+  opacity: 0;
+  transition: all 0.3s;
+  z-index: 10;
+}
+.book-tit {
+  font: 600 20px/1 "Pre";
+}
+.book-bg:hover::after,
+.book-bg:hover #book-tit-hover {
+  opacity: 1;
+}
+.bar-button {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.bar {
+  width: 94%;
+  height: 4px;
+  background: rgba(17, 17, 17, 0.1);
+}
+.bar-inner {
+  width: 33%;
+  height: 100%;
+  background: #000;
+}
+.btn {
+  display: flex;
+  justify-content: space-between;
+  width: 100px;
+}
+.btn span {
+  display: inline-block;
+  width: 40px;
+  cursor: pointer;
+}
+.btn .left svg {
+  transform: rotate(180deg);
+  stroke: rgba(17, 17, 17, 0.3);
+}
+.content-test {
+  display: flex;
+  justify-content: center;
+}
+.content-test img {
+  width: 100%;
+  max-width: 1440px;
 }
