--- a/240409/react01/src/index.css
+++ b/240409/react01/src/index.css
@@ -3,5 +3,19 @@
 /* font-family: "Nanum Pen Script"; */
 
 body {
+  width: 100%;
+  height: 100vh;
+  background: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Nanum Pen Script";
+}
+
+#root {
+  max-width: 800px;
+  background: #fff;
+  border-radius: 8px;
+  padding: 40px 20px;
+  box-shadow: 0 7px 29px rgba(100, 100, 100, 0.2);
 }
