--- a/javascript/Slide_Project/style.css
+++ b/javascript/Slide_Project/style.css
@@ -6,21 +6,23 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: rgb(216, 237, 255);
+  background: rgba(211, 226, 255, 0.8);
 }
 .slide-wrapper {
   position: relative;
-  width: 640px;
-  height: 480px;
+  width: 750px;
+  height: 374px;
+
+  border-radius: 18px;
   overflow: hidden;
   margin: 0 auto;
-  border: 1px solid red;
 }
 .slides {
   position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
+  left: 0;
 }
 .slides.animated {
   transition: all 0.3s ease-out;
@@ -29,7 +31,7 @@ body {
   position: absolute;
   display: flex;
   justify-content: space-between;
-  width: 800px;
+  width: 900px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
