--- a/240409/react01/src/index.css
+++ b/240409/react01/src/index.css
@@ -13,7 +13,10 @@ body {
 }
 
 #root {
-  max-width: 800px;
+  width: 100%;
+  max-width: 600px;
+  height: 100vh;
+  max-height: 800px;
   background: #fff;
   border-radius: 8px;
   padding: 40px 20px;
