--- a/javascript/Slide_Project/style.css
+++ b/javascript/Slide_Project/style.css
@@ -7,13 +7,13 @@ body {
   flex-direction: column;
   justify-content: center;
   background: rgba(211, 226, 255, 0.8);
+  overflow: hidden;
 }
 .slide-wrapper {
   position: relative;
   width: 750px;
-  height: 374px;
+  height: 376px;
   border-radius: 18px;
-  overflow: hidden;
   margin: 0 auto;
 }
 .slides {
@@ -21,8 +21,10 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  gap: 50px;
   left: 0;
 }
+
 .slides.animated {
   transition: all 0.3s ease-out;
 }
