--- a/javascript/touch-slide/style.css
+++ b/javascript/touch-slide/style.css
@@ -1,20 +1,30 @@
-@import url("./reset.css");
-body {
+body,
+html {
+  margin: 0;
+  padding: 0;
   width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
+  height: 100%;
 }
-.wrapper {
-  width: 100%;
-  justify-content: center;
-  display: flex;
+
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow-x: auto;
+  white-space: nowrap;
 }
-.wrapper ul {
-  display: flex;
+
+.item {
+  display: inline-block;
+  margin: 10px;
+}
+
+.image {
   width: 500px;
+  height: auto;
+  pointer-events: none;
 }
-.wrapper ul li img {
-  width: 500px;
+
+.list::-webkit-scrollbar {
+  display: none;
 }
