--- a/240417/react02/src/App.css
+++ b/240417/react02/src/App.css
@@ -24,16 +24,18 @@ li {
   gap: 8px;
   cursor: pointer;
 }
+
 /*logo*/
 .nav-logo {
   display: flex;
   justify-content: center;
-  margin: -30px 0 14px 0;
+  margin: -40px 0 24px 0;
 }
 /*menu*/
 .nav-menu-area {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 .menu {
   display: flex;
@@ -47,7 +49,7 @@ li {
 .search-box {
   position: absolute;
   right: 50px;
-  top: 154px;
+  top: 160px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,4 +63,11 @@ li {
 .search-box input:focus {
   outline: none;
   border-bottom: 1px solid #000;
+}
+/*product card*/
+.productcard {
+  padding: 20px 0;
+}
+.productcard img {
+  margin-bottom: 10px;
 }
