--- a/javascript/mega/style.css
+++ b/javascript/mega/style.css
@@ -95,32 +95,20 @@ nav {
 }
 /*-----content-slide-----*/
 .content-slide {
-  margin-top: 120px;
+  margin-top: 140px;
   width: 100%;
-  overflow: hidden;
 }
-.slide {
-  width: 80%;
-  overflow: hidden;
-  margin: 0 auto;
-}
-.slide ul {
+.content-slide ul {
   position: relative;
   display: flex;
-  gap: 80px;
-  width: auto;
+  width: 1440px;
   margin: 0 auto;
 }
-.slide-btn {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-
-  width: 1500px;
-  left: -28px;
-  top: 50%;
+.content-slide ul li {
+  margin-right: 80px;
 }
 .slide-btn span {
+  position: absolute;
   display: inline-block;
   width: 42px;
   height: 42px;
@@ -129,17 +117,24 @@ nav {
   text-align: center;
   line-height: 50px;
   cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
+.slide-btn span:first-child {
+  left: -21px;
+}
+.slide-btn span:last-child {
+  right: -21px;
+}
 .slide-btn .prev {
   transform: rotate(180deg);
 }
-.slide ul li {
+/* .slide ul li {
   width: 100%;
 }
 .slide ul li img {
   object-fit: cover;
-}
+} */
 .current-page {
   position: absolute;
   right: 120px;
@@ -159,7 +154,7 @@ nav {
 /*-----content-info-----*/
 .content-info {
   height: 150px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .content-info ul {
   height: 100%;
@@ -216,6 +211,7 @@ nav {
   display: flex;
   overflow: hidden;
   margin-bottom: 50px;
+  gap: 20px;
 }
 .pick-book {
   width: 100%;
@@ -252,12 +248,14 @@ nav {
   position: absolute;
   left: 50%;
   top: 50%;
+  width: 80%;
   transform: translate(-50%, -50%);
   color: #fff;
   font: 600 18px/1 "Pre";
   opacity: 0;
   transition: all 0.3s;
   z-index: 10;
+  text-align: center;
 }
 .book-tit {
   font: 600 20px/1 "Pre";
@@ -296,11 +294,39 @@ nav {
   transform: rotate(180deg);
   stroke: rgba(17, 17, 17, 0.3);
 }
+/*-----content-test-----*/
 .content-test {
   display: flex;
+  margin: 40px auto;
   justify-content: center;
 }
 .content-test img {
   width: 100%;
   max-width: 1440px;
+}
+/*-----content-bestseller-----*/
+.content-bestseller {
+  border: 1px solid red;
+  width: 1440px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.slide-wrap {
+  width: auto;
+}
+.slide-wrap .item {
+  display: flex;
+}
+.slide-item {
+  min-height: 476px;
+  min-width: 480px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.slide-item img {
+  display: inline-block;
+  width: 280px;
+  height: 390px;
+  margin-bottom: 39px;
 }
