--- a/javascript/mega/style.css
+++ b/javascript/mega/style.css
@@ -1,5 +1,8 @@
 @import "./reset.css";
 @import "./font.css";
+body {
+  /* overflow-x: hidden; */
+}
 .wrap {
   font-family: "Pre";
   position: relative;
@@ -178,18 +181,26 @@ nav {
 }
 /*-----content-slide-----*/
 .content-slide {
-  margin-top: 124px;
   width: 100%;
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  margin-top: 124px;
+  /* overflow: hidden; */
 }
 .content-slide ul {
   position: relative;
   display: flex;
-  width: 1440px;
-  margin: 0 auto;
+  width: 75vw;
+  min-width: 1000px;
+  justify-content: flex-start;
 }
 .content-slide ul li {
   margin-right: 80px;
+  width: 75vw;
+  min-width: 1000px;
+}
+.content-slide ul li img {
+  width: 100%;
 }
 .slide-btn span {
   position: absolute;
@@ -214,16 +225,10 @@ nav {
 .slide-btn .prev svg {
   transform: rotate(180deg);
 }
-/* .slide ul li {
-  width: 100%;
-}
 
-.slide ul li img {
-  object-fit: cover;
-} */
 .current-page {
   position: absolute;
-  right: 120px;
+  right: 30px;
   bottom: 30px;
   display: flex;
   justify-content: space-between;
@@ -239,30 +244,39 @@ nav {
 
 /*-----content-info-----*/
 .content-info {
-  width: 1440px;
+  width: 100%;
   height: 150px;
   margin: 32px auto;
 }
 .content-info ul {
   height: 100%;
-  align-items: center;
+  width: 100vw;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
-  gap: 94px;
+  flex-grow: 1;
+  align-items: center;
+  gap: 4%;
 }
 .content-info ul li {
-  width: 150px;
-  height: 150px;
+  width: 8vw;
+  min-width: 140px;
+  height: 16vh;
+  max-height: 16vh;
   border-radius: 20px;
   background: #fff;
   transition: all 0.3s;
 }
 .content-info ul li a {
   display: flex;
+  flex-direction: column;
+  gap: 8px;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
+  font-size: 18px;
+  font-weight: 500;
 }
 .content-info ul li:hover {
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
@@ -270,17 +284,20 @@ nav {
 /*-----content-pick-----*/
 .content-pick {
   display: flex;
+  width: 100%;
 }
 .pick-wrap {
-  width: 1440px;
-  margin: 20px auto;
+  margin: 20px auto 0;
+  width: 78%;
+  min-width: 1000px;
+  overflow: hidden;
 }
 .pick-tit {
   font: 600 2.6rem/1 "Pre";
   height: 60px;
 }
 .pick-submenu {
-  width: 1440px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -291,23 +308,29 @@ nav {
   border-radius: 40px;
   border: 1px solid #cfcfcf;
   font: 500 18px/1 "Pre";
+  height: auto;
 }
 .pick-slide {
   width: 100%;
-  height: auto;
+  aspect-ratio: 2.9;
   display: flex;
-  overflow: hidden;
-  margin-bottom: 50px;
-  gap: 20px;
+  margin-bottom: 2%;
+  position: relative;
+  gap: 16px;
 }
 .pick-book {
   width: 100%;
   display: flex;
-  margin-top: 28px;
+  gap: 16px;
+}
+.book-item {
+  width: 365px;
+  height: 400px;
+  min-width: 0;
 }
 .book-bg {
-  width: 345px;
-  height: 400px;
+  width: 100%;
+  aspect-ratio: 0.8;
   border-radius: 30px;
   background: #f5f8fd;
   margin: 20px 20px 20px 0;
@@ -346,7 +369,7 @@ nav {
 }
 .book-tit {
   font: 600 20px/1 "Pre";
-  width: 340px;
+  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -361,6 +384,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 8px;
+  position: relative;
 }
 .bar {
   width: 94%;
@@ -389,7 +413,7 @@ nav {
 /*-----content-test-----*/
 .content-test {
   display: flex;
-  margin: 100px auto;
+  margin: 6% auto;
   justify-content: center;
 }
 .content-test img {
@@ -398,15 +422,20 @@ nav {
 }
 /*-----content-bestseller-----*/
 .content-bestseller {
-  width: 1440px;
-  margin: 100px auto;
-  padding-top: 50px;
+  width: 100%;
+  position: relative;
+}
+.best-wrap {
+  width: 78%;
+  margin: 180px auto;
+  padding-top: 20px;
 }
 .bg {
   position: absolute;
   left: 0;
-  top: 1880px;
-  width: 730px;
+  top: 0;
+  width: 36.5%;
+  /* width: 730px; */
   height: 790px;
   background: #d5e9fc;
   border-top-right-radius: 96px;
@@ -473,29 +502,34 @@ nav {
   display: none;
 }
 .slide-wrap {
-  width: auto;
-  height: 540px;
+  width: 100%;
+  height: 520px;
   overflow: hidden;
   position: relative;
 }
 .slide-wrap .item {
   display: flex;
+  width: auto;
+  gap: 24px;
+  margin: 0 auto;
 }
+
 .slide-item {
-  min-height: 476px;
-  min-width: 486px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  min-height: 24%;
+  min-width: 32%;
 }
 .slide-item img {
   display: inline-block;
-  width: 280px;
-  height: 390px;
+  width: 268px;
+  height: auto;
   margin-bottom: 39px;
 }
 .slide-item h2 {
-  width: 440px;
+  width: 100%;
   height: 32px;
   font-size: 28px;
   overflow: hidden;
@@ -523,13 +557,14 @@ nav {
   background: #000;
 }
 .bestseller-btn span {
-  top: 36%;
+  top: 42%;
 }
+
 .bestseller-btn span:first-child {
-  left: 464px;
+  left: 31.4%;
 }
 .bestseller-btn span:last-child {
-  left: 944px;
+  left: 63.4%;
 }
 /*-----content-youtube-----*/
 .content-youtube {
@@ -563,11 +598,12 @@ nav {
 }
 /*-----content-event-----*/
 .content-event {
-  width: 1440px;
+  width: 78%;
   margin: 0 auto;
   padding-bottom: 100px;
   display: flex;
   justify-content: space-between;
+  min-width: 1200px;
 }
 
 .event-tit h1 {
@@ -619,7 +655,7 @@ nav {
 }
 /*-----content-notice-----*/
 .content-notice {
-  width: 1440px;
+  width: 78%;
   margin: 20px auto;
   padding: 50px 0;
 }
@@ -640,6 +676,7 @@ nav {
   align-items: center;
   gap: 8px;
   width: 100%;
+  min-width: 320px;
   border-radius: 20px;
   transition: all 0.3s;
 }
@@ -656,17 +693,31 @@ nav {
 .notice-inner a:hover {
   box-shadow: 0 0 24px rgba(100, 100, 100, 0.2);
 }
+.community {
+  width: 78%;
+}
+.community-inner {
+  width: 100%;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
 .community-list {
-  flex-direction: row;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  height: 70px;
+  min-width: 280px;
+  max-width: 280px;
+  padding: 0 16px 0 32px;
   background: #fff;
   border: 1px solid #ddd;
-  height: 70px;
-  justify-content: space-between;
-  padding: 0 16px 0 32px;
-  margin: 20px 0 60px 0;
+  border-radius: 20px;
+  transition: all 0.3s;
 }
 .community-list:hover {
   border: 1px solid #000;
+  box-shadow: 0 0 24px rgba(100, 100, 100, 0.2);
 }
 .left {
   display: flex;
@@ -682,23 +733,27 @@ footer {
 }
 .footer-nav {
   display: flex;
+
   align-items: center;
-  width: 1440px;
+  width: 78%;
   height: inherit;
   margin: 0 auto;
 }
 .footer-nav-left,
 .footer-nav-right {
   display: flex;
+  flex-wrap: wrap;
   color: #fff;
 }
 .footer-nav-left {
-  gap: 60px;
-  margin-right: 180px;
+  width: 80%;
+  gap: 6%;
+  margin-right: 10%;
 }
+
 .footer-nav-right {
-  gap: 32px;
-  margin-right: 32px;
+  width: 20%;
+  gap: 10%;
 }
 #familySite {
   width: 160px;
