--- a/240423/react01/src/App.css
+++ b/240423/react01/src/App.css
@@ -1,3 +1,12 @@
+.wrapper {
+  background: #000;
+  width: 100vw;
+  height: 100vh;
+}
+.navBar {
+  z-index: 1;
+  position: relative;
+}
 .nav-item {
   text-decoration: none;
   color: #fff;
@@ -6,4 +15,33 @@
 }
 .nav-item:hover {
   color: #f00;
+}
+.banner {
+  width: 100vw;
+  height: 800px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left bottom;
+  display: flex;
+  align-items: center;
+}
+.banner::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 72px;
+  width: 100%;
+  height: 800px;
+  background: linear-gradient(to right, black, transparent);
+}
+.banner-info {
+  width: 40%;
+  margin-left: 30px;
+  z-index: 1;
+  color: #fff;
+}
+.movieContent {
+  z-index: 1;
+  position: relative;
+  color: #fff;
 }
